# simple_remote_repository

./: CMakeLists.txt  asssembly.asm  main.cpp  new_file.cpp
